--- a/praca_dyplomowa/praca_dyplomowa.tex
+++ b/praca_dyplomowa/praca_dyplomowa.tex
@@ -1066,9 +1066,24 @@ Z wykonanych analiz dokładności klasyfikatorów w zależności od parametru k 
 	
 
 \chapter{Podsumowanie}
+	W niniejszej pracy inżynierskiej opisano podejście do rozpoznawania gestów na przykładzie gry papier, kamień, nożyce. Wykorzystując bibliotekę OpenCV przedstawiono w jaki sposób można wysegmentować dłoń. Techniki opisane w pracy z według mojej oceny dały bardzo dobre rezultaty. Segmentacja gestu pozwoliła na wyraźne wyłuskanie dłoni wykonującej gest.
+	
+	Segmentacja była pierwszym etapem przy procesie poznawania gestów. Po nim zaś nastąpił bezpośredni proces klasyfikacji dłoni. W pierwszym sposobie podejścia do klasyfikowania jakim był klasyfikator KNN. Klasyfikator ten dla odpowiednich parametrów osiągnął średnią skuteczność 86.08\%, zakładając użycie trzech cech opisujących wysegmentowaną dłoń uważam, że jest to zadowalająca skuteczność.
+	
+	Drugim zaś podejściem do klasyfikacji był klasyfikator oparty o sieci neuronowe. Przy jego wykorzystaniu skuteczność rozpoznawania zdecydowanie przewyższyła klasyfikator KNN. Rozpoznawanie takie było praktycznie bezbłędne na zgromadzonym zestawie danych, ponieważ klasyfikator przy uzyskanych najlepszych parametrach osiągał skuteczność powyżej 99\%, co w moim przeświadczeniu jest wyśmienitym rezultatem, biorąc pod uwagę cały proces rozpoznawania gestów.
+	
+	W mojej ocenie cel jaki na początku swojej  pracy założyłem, czyli prawidłowe rozpoznawanie trzech gestów papieru, kamienia oraz nożyc, został osiągnięty z sukcesem. Klasyfikator oparty na sieciach neuronowych pokazał jak  wielkie możliwości daje wykorzystanie sztucznych sieci neuronowych, które coraz częściej są wykorzystywane w naszym codziennym życiu. 
 
-
-
+	\paragraph{Jak można rozbudować tą pracę inżynierską: }
+		\begin{enumerate}
+			\item Zgromadzenie większego zbioru danych 
+			\item Wyekstrahowanie większej ilości cech dla klasyfikatora KNN 
+			\item Porównanie klasyfikatora KNN z innymi klasyfikatorami
+			\item Wykorzystanie sieci CNN
+			\item Klasyfikacja dłoni bez użycia rękawiczki
+			\item Zaimplementowanie gry dla wielu graczy wykorzystując stworzone klasyfikatory
+			\item Dodanie do klasyfikacji kolejnych gestów
+		\end{enumerate}
 
 
 \appendix
